--- a/RenderLibraryBackend/appsettings.json
+++ b/RenderLibraryBackend/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.88.252;Database=render_gallery;Uid=user;Pwd=password;"
+    "DefaultConnection": "Server=192.168.88.252;Database=render_gallery;Uid=user;Pwd=password;",
+    "Redis": "192.168.88.252:6379"
   }
 }
